--- a/gzcTemplate2/css/style.css
+++ b/gzcTemplate2/css/style.css
@@ -6,6 +6,7 @@ body {
 	color:#999999;
 	font:normal 12px/1.5em "Liberation sans", Arial, Helvetica, sans-serif;
 }
+
 html, .main {
 	padding:0;
 	margin:0;
@@ -48,10 +49,11 @@ a {
 	width:960px;
 }
 .logo {
+	background: url("../images/logo.jpg") top center no-repeat;
 	padding:0;
 	float:none;
 	width:auto;
-	height:108px;
+	height:80px;
 }
 h1 {
 	margin:0;
